Edge:
* [CHANGE] Exceptions raised when communicating with Sphinx are now mentioned in the logs when queries are retried (instead of STDOUT).
* [CHANGE] Excerpts now use just the query and standard conditions, instead of parsing Sphinx's keyword metadata (which had model names in it).
* [FIX] The settings cache is now cleared when the configuration singleton is reset (Pedro Cunha).
* [FEATURE] The :facets option can be used in facet searches to limit which facets are queried.
* [FIX] Escaped @'s in queries are considered part of each word, instead of word separators.
* [FIX] Internal class name conditions are ignored with auto-starred queries.
* [FEATURE] A separate role can be set for Sphinx actions with Capistrano (Andrey Chernih).
* [FIX] RDoc doesn't like constant hierarchies split over multiple lines.
* [CHANGE] Get database connection details from ActiveRecord::Base, not each model, as this is where changes are reflected.
* [CHANGE] Default Sphinx scopes are applied to new facet searches.
* [FEATURE] Facet searches can now be called from Sphinx scopes.

2013-05-07: 3.0.3
* [CHANGE] Updating Riddle dependency to be >= 1.5.6
* [FEATURE] INDEX_ONLY environment flag is passed through when invoked through Capistrano (Demian Ferreiro).
* [FEATURE] use_64_bit option returns as cast_to_timestamp instead (Denis Abushaev).
* [FIX] Update to association handling for Rails/ActiveRecord 4.0.0.rc1.
* [CHANGE] Delta jobs get common classes to allow third-party delta behaviours to leverage Thinking Sphinx.
* [FEATURE] Collection of hooks (lambdas) that get called before indexing. Useful for delta libraries.
* [FIX] Cast and concatenate multi-column attributes correctly.
* [FIX] Don't load fields or attributes when building a real-time index - otherwise the index is translated before it has a chance to be built.
* [CHANGE] Raise ThinkingSphinx::MixedScopesError if a search is called through an ActiveRecord scope.
* [FIX] Default search panes are cloned for each search.